samples/_failures_safe/1761260353_181449_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b63a28f.c: In function ‘main’:
./samples/SAFE/__tmp_1b63a28f.c:174:5: error: expected declaration or statement at end of input
  174 |     initialize_state_machine(&sm);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
